--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,16 +3,28 @@
 @import 'normalize.css/normalize.css';
 
 /* ==========================================================================
-  Foundation
+  Utility
 ========================================================================== */
+@import './object/utility/mixin';
 
 /* ==========================================================================
   Foundation
 ========================================================================== */
+@import './foundation/reset';
+@import './foundation/base';
+@import './foundation/font';
+@import './foundation/variable';
+
+/* ==========================================================================
+  Layout
+========================================================================== */
+@import './layout/header';
+
 
 /* ==========================================================================
   Project
 ========================================================================== */
+@import './object/project/mainvisual';
 
 /* ==========================================================================
   Component
