--- a/src/scss/foundation/_variable.scss
+++ b/src/scss/foundation/_variable.scss
@@ -1,4 +1,7 @@
 $bgColor1: #FAF4F2;
 $bgColor2: #FAEDE8;
+$bgColor3: #F8E1DB;
+$whiteColor: #FFF;
+$darkColor: #3B3735;
 $footerBg: #F8E1DB;
 $orangeColor: #E76F51;
