--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -3,7 +3,7 @@
     z-index: 2;
     padding: 0 10%;
     a {
-        color: #FFF;
+        color: $whiteColor;
     }
     nav {
         // @include setWidth();
