--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,25 +10,31 @@
 /* ==========================================================================
   Foundation
 ========================================================================== */
+@import './foundation/variable';
 @import './foundation/reset';
 @import './foundation/base';
 @import './foundation/font';
-@import './foundation/variable';
 
 /* ==========================================================================
   Layout
 ========================================================================== */
 @import './layout/header';
+@import './layout/footer';
+@import './layout/layout';
 
 
 /* ==========================================================================
   Project
 ========================================================================== */
 @import './object/project/mainvisual';
+@import './object/project/service';
+@import './object/project/blob';
+@import './object/project/destination';
+@import './object/project/subscribe';
 
 /* ==========================================================================
   Component
 ========================================================================== */
-h1 {
-  color: #f00;
-}
+@import './object/component/services-card';
+@import './object/component/destination-card';
+@import './object/component/btn';
