--- a/src/scss/object/project/_mainvisual.scss
+++ b/src/scss/object/project/_mainvisual.scss
@@ -1,6 +1,7 @@
 .p-mainvisual {
     background-image: url(../img/mainvisual_bg.png);
     background-size: cover;
+    background-position: bottom;
     width: 100%;
     height: 100vh;
     position: absolute;
@@ -8,13 +9,19 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;    
+    z-index: 1;
     &__info {
-        color: #FFF;
+        color: $whiteColor;
     h2 {
         @include archivoFont(1000);
         font-size: 81px;
         text-align: center;
         line-height: 1.2;
+        margin-bottom: 35px;
+    }
+    p {
+        text-align: center;
+        line-height: 25px;
     }
     }
 }
