--- a/src/scss/object/project/_subscribe.scss
+++ b/src/scss/object/project/_subscribe.scss
@@ -6,6 +6,7 @@
     position: relative;
     overflow: hidden;
     border-radius: 20px;
+    margin-bottom: 180px;
     &__blob {
         position: absolute;
         top: -380px;
