--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,11 +1,52 @@
 .l-footer {
     width: 100%;
-    &__bg {
-        background-image: url(../img/footerBg.svg);
-        width: 100%;
-        height: 500px;
-    }
+    background-color: $bgColor3;
+    border-top-left-radius: 150px;
+    border-top-right-radius: 150px;
     &__container {
-        top: 0;
+        @include setMaxWidth(1518px);
+        margin: 0 auto;
+        padding-top: 105px;
+        color: $darkColor;
+        display: flex;
+        gap: 160px;
+        h3 {
+            @include archivoBlackFont();
+            font-size: 18px;
+            margin-bottom: 20px;
+            color: $darkColor;
+        }
+        .footer-info {
+            max-width: 615px;
+            p {
+                @include robotoFont();
+                font-size: 16px;
+                line-height: 28px;
+            }
+            &__download {
+                margin-top: 40px;
+                .down-img {
+                    display: flex;
+                    gap: 15px;
+                }
+            }
+        }
+        .footer-tag {
+            display: flex;
+            gap: 50px;
+            max-width: 50%;
+            a {
+                color: $darkColor;
+                @include robotoFont();
+                font-size: 16px;
+                line-height: 28px;
+            }
+        }
+    }
+    address {
+        text-align: center;
+        padding: 60px 0;
+        @include robotoFont();
+        font-size: 16px;
     }
 }
