--- a/src/scss/object/project/_mainvisual.scss
+++ b/src/scss/object/project/_mainvisual.scss
@@ -13,7 +13,7 @@
     &__info {
         color: $whiteColor;
     h2 {
-        @include archivoFont(1000);
+        @include archivoBlackFont();
         font-size: 81px;
         text-align: center;
         line-height: 1.2;
@@ -23,5 +23,22 @@
         text-align: center;
         line-height: 25px;
     }
+    }
+    &__btn {
+        background: $orangeColor;
+        border-radius: 25px;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        a {
+            color: #FFF;
+        }
+    }
+}
+@media screen and (max-width: 415px) {
+    .p-mainvisual {
+        h2 {
+            font-size: 45px;
+        }
     }
 }
