--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -55,4 +55,17 @@
             border-radius: 25px;
         }
     }
+    &__menu {
+        background: #FFF;
+        width: 50px;
+        height: 50px;
+        border-radius: 20px;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        a {
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
