--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -1,3 +1,17 @@
 .mx-auto {
     margin: 0 auto;
 }
+.md-hidden {
+    display: none;
+}
+@media screen and (max-width: 415px) {
+    .xs-hidden {
+        display: none;
+    }    
+    .xs-inflex {
+        display: inline-flex;
+    }
+    .xs-block {
+        display: block;
+    }
+}
