--- a/src/scss/object/component/_btn.scss
+++ b/src/scss/object/component/_btn.scss
@@ -4,7 +4,6 @@
     a {
         width: 100%;
         height: 100%;
-        color: #8D8D8D;
         @include robotoFont(500);
         font-size: 18px;
         padding: 13px 50px;
@@ -13,9 +12,13 @@
 .c-btn-readmore {
     background: #eeeeee;
     border-radius: 25px;
+    a {
+        color: #8D8D8D;
+    }
 }
 .c-btn-viewall {
     margin-top: 60px;
+    color: #8D8D8D;
     a {
         color: $orangeColor;
         border: 1px solid $orangeColor;
