--- a/src/scss/object/component/_services-card.scss
+++ b/src/scss/object/component/_services-card.scss
@@ -21,3 +21,10 @@
         }
     }
 }
+@media screen and (max-width: 415px) {
+    .c-services-card {
+        width: 100%;
+        padding: 60px 0px;
+        margin-bottom: 20px;
+    }
+}
