--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -52,18 +52,31 @@
     }
     .btt-btn {
         background: #ffffffc7;
-        padding: 17.5px 21px;
-        border-radius: 25px;
+        height: 60px;
+        width: 60px;
         position: absolute;
         top: -30px;
         right: 200px;
+        border-radius: 25px;
+        a {
+            width: 100%;
+            height: 100%;
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 25px;
+            &:hover {
+            background: #e4875c7a;
+            transition: .5s;
+            }   
+        }  
     }
 }
 .footer-info__download {
     @include setWidth(1518px);
     margin: 0 auto;
 }
-@media screen and (max-width: 415px) {
+@media screen and (max-width: 800px) {
     .l-footer {
         &__container {
             display: block;
@@ -80,7 +93,7 @@
         }
         .btt-btn {
             right: 50%;
-            transform: translateX(50%);
+            transform: translateX(50%); 
         }
     }
     .footer-info__download {
