--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -38,6 +38,27 @@
             ul {
                 display: flex;
                 gap: 40px;
+                li {
+                position: relative;
+                    a {
+                        &::after {
+                            content: "";
+                            width: 0;
+                            background: #D9F0FF;
+                            left: 0;
+                            bottom: -5px;
+                            position: absolute;
+                        }
+                        &:hover {
+                            &::after {
+                                content: "";
+                                width: 100%;
+                                height: 1.5px;
+                                transition: width .5s ease-out;
+                            }
+                        }
+                    }
+                }
             }
         }
     }
@@ -51,8 +72,21 @@
         }
         &__signin {
             border: 1px solid #FFF;
-            padding: 19px 38px;
             border-radius: 25px;
+            width: 130px;
+            height: 50px;
+            a {
+                width: 100%;
+                height: 100%;
+                display: inline-flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 25px;
+                &:hover {
+                    background: #6868686c;
+                    transition: .5s;
+                }
+            }
         }
     }
     &__menu {
