--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -4,7 +4,7 @@
 .md-hidden {
     display: none;
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1024px) {
     .xs-hidden {
         display: none;
     }    
@@ -13,5 +13,10 @@
     }
     .xs-block {
         display: block;
+    }
+}
+@media screen and (max-width: 1440px) {
+    .inner-wrapper {
+        padding: 0 40px;
     }
 }
