--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,7 +1,4 @@
 .l-head {
-    position: relative;
-    z-index: 2;
-    padding: 0 10%;
     a {
         color: $whiteColor;
     }
@@ -101,5 +98,20 @@
             width: 100%;
             height: 100%;
         }
+    }
+}
+@media screen and (max-width: 800px) {
+    .l-head {
+        padding: 0 30px;
+    }
+}
+@media screen and (max-width: 600px) {
+    .l-head {
+        padding: 0 20px;
+    }
+}
+@media screen and (max-width: 500px) {
+    .l-head {
+        padding: 0 15px;
     }
 }
