--- a/src/scss/object/component/_services-card.scss
+++ b/src/scss/object/component/_services-card.scss
@@ -21,7 +21,12 @@
         }
     }
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
+    .c-services-card {
+        width: calc(50% - 55px);
+    }
+}
+@media screen and (max-width: 500px) {
     .c-services-card {
         width: 100%;
         padding: 60px 0px;
