--- a/src/scss/object/project/_destination.scss
+++ b/src/scss/object/project/_destination.scss
@@ -31,6 +31,11 @@
 }
 @media screen and (max-width: 800px) {
     .p-destination {
+        @include setMaxWidth(690px);
+    }
+}
+@media screen and (max-width: 500px) {
+    .p-destination {
         @include setMaxWidth(374px);
     }
     .destination-info {
