--- a/src/scss/object/project/_mainvisual.scss
+++ b/src/scss/object/project/_mainvisual.scss
@@ -1,15 +1,14 @@
 .p-mainvisual {
     background-image: url(../img/mainvisual_bg.png);
-    background-size: cover;
+    background-size: 100% 100%;
     background-position: bottom;
     width: 100%;
-    height: 100vh;
-    position: absolute;
-    top: 0;
+    height: 1080px;
     display: inline-flex;
     justify-content: center;
     align-items: center;    
     z-index: 1;
+    position: relative;
     &__info {
         color: $whiteColor;
     h2 {
