--- a/src/scss/object/project/_service.scss
+++ b/src/scss/object/project/_service.scss
@@ -1,22 +1,31 @@
 .p-services {
     width: 100%;
-    position: absolute;
-    bottom: -200px;
-    @include setMaxWidth();
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 2;
+    margin: -130px auto 80px;
     &__container {
         display: flex;
         gap: 30px;
+        margin: 0 auto;
+        @include setMaxWidth();
+        z-index: 1;
+        position: relative;
     }
 }
+
 @media screen and (max-width: 800px) {
     .p-services {
-        @include setMaxWidth(374px);
+        @include setMaxWidth(690px);
+        margin: -130px auto 80px;
         bottom: 0;
         position: relative;
         margin-bottom: 100px;
+        &__container {
+            flex-wrap: wrap;
+        }
+    }
+}
+@media screen and (max-width: 500px) {
+    .p-services {
+        @include setMaxWidth(374px);
         &__container {
             display: block;
         }
