--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -7,7 +7,10 @@
 .l-wrap-inner {
     @include setMaxWidth();
     margin: 0 auto;
-  }
+}
+.stopScroll {
+    overflow: hidden;
+}
 @media screen and (max-width: 1024px) {
     .xs-hidden {
         display: none;
