--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -9,6 +9,16 @@
         display: flex;
         justify-content: space-between;
     }
+    &__overlay {
+        background: rgba(44, 44, 44, 0.91);
+        width: 100%;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        z-index: 6;
+        right: -500px;
+        transition: .5s ease-out;
+    }
     .nav-logo {
         &__bg {
             background-color: $orangeColor;
@@ -113,5 +123,37 @@
 @media screen and (max-width: 500px) {
     .l-head {
         padding: 0 15px;
+    }
+    .l-head__overlay {
+        overflow-y: hidden;
+        a {
+            font-size: 20px;
+        }
+        .l-wrap-inner {
+            display: flex;
+        }
+        .l-head__account {
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            width: 100%;
+            justify-content: center;
+            align-items: center;
+            gap: 45px;
+            a {
+                color: white;
+            }
+        }
+    }
+    .show {
+        display: block;
+        opacity: 1;
+        right: 0;
+        transition: .5s ease-out;
+    }
+}
+@media screen and (min-width: 500px) {
+    .l-head__overlay {
+        display: none;
     }
 }
